fix css, la fecha se veia mal en pantallas intermedias por el nowrap que le puse a todas las tablas

--- a/src/Movimientos.css
+++ b/src/Movimientos.css
@@ -168,6 +168,10 @@ td, th {
 
   @media only screen and (max-width: 772px){
 
+    .columnaFecha-mov {
+        white-space: normal;
+    }
+
     .tabla-movimientos{
         width: 560px;
     }
